# tidydir

./: .gitignore  README.md  index.html  pyproject.toml
src/tidydir/: cli.py  core.py
tests/: test_core.py
