[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tidydir"
version = "0.1.0"
description = "Automatically organize your messy folders"
authors = [{name = "Твоё Имя", email = "ketsuri1337@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
tidydir = "tidydir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]